Fix content overflowing content section
The profile pictures in the Trending section were causing the content
section to overflow the content section. Set them to a fixed height
based on the font size to keep them proportional to the text beside
them.

--- a/style.css
+++ b/style.css
@@ -203,14 +203,25 @@
   background-color: white;
   padding: 20px;
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  gap: 20px;
+  grid-template-columns: auto 1fr;
+  row-gap: 20px;
+  column-gap: 10px;
   border-radius: var(--border-radius);
-  align-content: center;
+  align-items: center;
   box-shadow: var(--steam-bath) 2px 3px 3px 1px;
 }
 
 .trending-user-project {
   font-size: small;
   color: var(--grey-web);
+}
+
+.trending-users-container > img {
+  border-radius: 50%;
+  max-width: 100%;
+  height: 3rem;
+}
+
+.trending-user {
+  justify-self: start;
 }
